findbugs router, router/client